--- a/solo.html
+++ b/solo.html
@@ -219,7 +219,7 @@
         <div class="form-note">
           <span class="required-star">*</span> 표시된 항목은 필수 입력입니다.
         </div>
-        <form id="post-form">
+        <form id="post-form" autocomplete="off">
           <label for="post-nickname">
             닉네임<span class="required-star">*</span>
           </label>
@@ -652,4 +652,5 @@ if (count === 0) {
 </body>
 
 </html>
+
 
