--- a/solo.html
+++ b/solo.html
@@ -224,31 +224,38 @@
             닉네임<span class="required-star">*</span>
           </label>
           <input
-            type="text"
-            id="post-nickname"
-            placeholder="예: dozy괴물"
-            required
-          />
+  type="text"
+  id="post-nickname"
+  placeholder="예: dozy괴물"
+  autocomplete="new-password"
+  required
+/>
+
 
           <label for="post-password">
             비밀번호<span class="required-star">*</span>
             <span class="optional-label">(마감/삭제/확인용, 4자리 숫자 추천)</span>
           </label>
           <input
-            type="password"
-            id="post-password"
-            placeholder="비밀번호를 입력하세요"
-            required
-          />
+  type="password"
+  id="post-password"
+  placeholder="비밀번호를 입력하세요"
+  autocomplete="new-password"
+  required
+/>
+
 
           <label for="post-title">
             게임할 시간<span class="required-star">*</span>
           </label>
           <input
-            type="text"
-            id="post-title"
-            placeholder="예: 지금 당장 / 오후 10시부터"
-            required
+  type="text"
+  id="post-title"
+  placeholder="예: 지금 당장 / 오후 10시부터"
+  autocomplete="new-password"
+  required
+/>
+
           />
 
           <label for="post-body">
@@ -652,5 +659,6 @@ if (count === 0) {
 </body>
 
 </html>
+
 
 
