--- a/solo.html
+++ b/solo.html
@@ -36,6 +36,14 @@
       margin-bottom: 12px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.08);
     }
+    
+    /* 1:1 글쓰기 폼 넓게 보이도록 강제 확장 */
+.col:first-child .card {
+  max-width: 600px;   /* 팀전과 거의 같은 넓이 */
+  width: 100%;
+  margin: 0 auto 16px; /* 가운데 정렬 */
+}
+
 
     /* 카드 헤더 (닉네임 + 배지 + X 버튼) */
     .post-header {
@@ -657,6 +665,7 @@ if (count === 0) {
 </body>
 
 </html>
+
 
 
 
