--- a/solo.html
+++ b/solo.html
@@ -5,209 +5,259 @@
   <title>1vs1 구인 게시판</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 16px;
-      background: #f5f5f5;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 16px;
-    }
+/* ===== 기본 레이아웃 (팀전이랑 동일) ===== */
 
-    /* 2열 레이아웃 */
-    .layout {
-      display: flex;
-      gap: 16px;
-      align-items: flex-start;
-      flex-wrap: wrap;
-    }
-    .col {
-      flex: 1 1 340px;
-      min-width: 0;
-    }
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 16px;
+  background: #f5f5f5;
+}
 
-    .card {
-      background: #ffffff;
-      border-radius: 8px;
-      padding: 12px 16px;
-      margin-bottom: 12px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.08);
-    }
+h1 {
+  text-align: center;
+  margin-bottom: 16px;
+}
 
+/* 두 컬럼 배치 */
+.layout {
+  display: flex;
+  gap: 16px;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
 
-    /* 카드 헤더 (닉네임 + 배지 + X 버튼) */
-    .post-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      gap: 8px;
-    }
-    .post-title-area h2 {
-      margin: 0 0 4px;
-      font-size: 18px;
-    }
+.col {
+  flex: 1 1 340px;
+  min-width: 0;
+}
 
-    .delete-btn {
-      background: transparent;
-      border: none;
-      color: #9ca3af;
-      font-size: 16px;
-      cursor: pointer;
-      padding: 0 4px;
-      line-height: 1;
-    }
-    .delete-btn:hover {
-      color: #ef4444;
-    }
+.card {
+  background: #ffffff;
+  border-radius: 8px;
+  padding: 12px 16px;
+  margin-bottom: 12px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.08);
+}
 
-    .meta {
-      font-size: 12px;
-      color: #666;
-      margin-bottom: 8px;
-    }
+/* ===== 폼 영역 (팀전 스타일로 키우기) ===== */
 
-    /* 닉네임 아래 게임할 시간 표시 */
-    .game-time {
-      font-size: 15px;
-      color: #2563eb;
-      font-weight: 600;
-      margin-bottom: 6px;
-    }
+label {
+  font-size: 13px;
+  font-weight: 600;
+  display: block;
+  margin-top: 6px;
+  margin-bottom: 4px;
+}
 
-    .form-note {
-      font-size: 12px;
-      color: #6b7280;
-      margin-bottom: 8px;
-    }
+.required-star {
+  color: #ef4444;
+  margin-left: 2px;
+}
 
-    label {
-      font-size: 13px;
-      font-weight: 600;
-      display: block;
-      margin-top: 6px;
-      margin-bottom: 2px;
-    }
-    .required-star {
-      color: #ef4444;
-      margin-left: 2px;
-    }
-    .optional-label {
-      font-weight: 500;
-      color: #6b7280;
-      font-size: 12px;
-      margin-left: 4px;
-    }
+.optional-label {
+  font-weight: 500;
+  color: #6b7280;
+  font-size: 12px;
+  margin-left: 4px;
+}
 
-    textarea, input[type="text"], input[type="password"] {
-      width: 100%;
-      box-sizing: border-box;
-      padding: 8px;
-      margin: 0 0 8px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      font-family: inherit;
-      font-size: 14px;
-    }
-    button {
-      padding: 6px 12px;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-      font-size: 14px;
-    }
-    button.primary {
-      background: #2563eb;
-      color: white;
-    }
-    button.danger {
-      background: #ef4444;
-      color: white;
-    }
-    button[disabled] {
-      background: #9ca3af;
-      cursor: default;
-    }
-    .post-body {
-      white-space: pre-wrap;
-      margin-bottom: 8px;
-    }
-    .badge {
-      display: inline-block;
-      padding: 2px 8px;
-      border-radius: 999px;
-      font-size: 11px;
-      margin-left: 4px;
-    }
-    .badge-open {
-      background: #dcfce7;
-      color: #166534;
-    }
-    .badge-closed {
-      background: #fee2e2;
-      color: #991b1b;
-    }
-    .comments {
-      margin-top: 8px;
-      padding-top: 8px;
-      border-top: 1px solid #e5e7eb;
-      font-size: 13px;
-    }
-    .comment {
-      margin-bottom: 4px;
-    }
-    .comment .author {
-      font-weight: 600;
-    }
-    .comment-form {
-      margin-top: 8px;
-    }
-    .small {
-      font-size: 12px;
-      color: #666;
-    }
+.form-note {
+  font-size: 12px;
+  color: #6b7280;
+  margin-bottom: 10px;
+}
 
-    .toggle-comments-btn {
-      margin-top: 4px;
-      font-size: 12px;
-      background: #e5e7eb;
-      color: #111827;
-    }
+textarea,
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 8px;
+  margin: 0 0 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-family: inherit;
+  font-size: 14px;
+  vertical-align: top;
+}
 
-    /* 댓글 헤더 (개수만 위에 표시) */
-    .comments-header {
-      margin-top: 4px;
-      margin-bottom: 0;
-    }
-    .comment-count {
-      font-size: 12px;
-      color: #6b7280;
-    }
+/* 등록 버튼 팀전처럼 가로 꽉 차게 */
+button.primary {
+  width: 100%;
+  padding: 10px;
+  font-size: 15px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  background: #2563eb;
+  color: white;
+}
 
-    /* 마감 버튼 오른쪽 정렬 */
-    .post-actions {
-      margin-top: 4px;
-      text-align: right;
-    }
+/* ===== 공통 버튼 ===== */
 
-    /* 카드 맨 아래 오른쪽 작성 시간 */
-    .footer-meta {
-      margin-top: 4px;
-      text-align: right;
-    }
-    .footer-meta .small {
-      font-size: 11px;
-      color: #9ca3af;
-    }
+button {
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+}
 
-    @media (max-width: 700px) {
-      .layout {
-        flex-direction: column;
-      }
-    }
-  </style>
+button.danger {
+  padding: 6px 12px;
+  font-size: 13px;
+  border-radius: 4px;
+  background: #ef4444;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+button.danger[disabled] {
+  background: #9ca3af;
+  cursor: default;
+}
+
+/* ===== 글 카드 영역 (팀전 카드 느낌으로 폰트 키움) ===== */
+
+.post-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+.post-title-area h2 {
+  margin: 0 0 4px;
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.game-time {
+  font-size: 18px;
+  color: #2563eb;
+  font-weight: 700;
+  margin-bottom: 6px;
+}
+
+.post-body {
+  white-space: pre-wrap;
+  font-size: 17px;
+  line-height: 1.5;
+  margin-bottom: 8px;
+}
+
+.delete-btn {
+  background: transparent;
+  border: none;
+  color: #9ca3af;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 0 4px;
+  line-height: 1;
+}
+
+.delete-btn:hover {
+  color: #ef4444;
+}
+
+.meta {
+  font-size: 12px;
+  color: #666;
+  margin-bottom: 8px;
+}
+
+.badge {
+  display: inline-block;
+  padding: 2px 8px;
+  border-radius: 999px;
+  font-size: 11px;
+  margin-left: 6px;
+}
+
+.badge-open {
+  background: #dcfce7;
+  color: #166534;
+}
+
+.badge-closed {
+  background: #fee2e2;
+  color: #991b1b;
+}
+
+/* ===== 댓글 영역 ===== */
+
+.comments {
+  margin-top: 8px;
+  padding-top: 8px;
+  border-top: 1px solid #e5e7eb;
+  font-size: 13px;
+}
+
+.comment {
+  margin-bottom: 4px;
+}
+
+.comment .author {
+  font-weight: 600;
+}
+
+.comment-form {
+  margin-top: 8px;
+}
+
+.small {
+  font-size: 12px;
+  color: #666;
+}
+
+.toggle-comments-btn {
+  margin-top: 4px;
+  font-size: 12px;
+  background: #e5e7eb;
+  color: #111827;
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: none;
+}
+
+/* 댓글 개수 위에 표시 */
+.comments-header {
+  margin-top: 4px;
+  margin-bottom: 0;
+}
+
+.comment-count {
+  font-size: 12px;
+  color: #6b7280;
+}
+
+/* 마감 버튼 오른쪽 정렬 */
+.post-actions {
+  margin-top: 4px;
+  text-align: right;
+}
+
+/* 카드 맨 아래 작성 시간 */
+.footer-meta {
+  margin-top: 4px;
+  text-align: right;
+}
+
+.footer-meta .small {
+  font-size: 11px;
+  color: #9ca3af;
+}
+
+/* 모바일에서는 두 컬럼 세로로 쌓기 */
+@media (max-width: 700px) {
+  .layout {
+    flex-direction: column;
+  }
+}
+</style>
+
 </head>
 <body>
   <h1>1vs1 구인 게시판</h1>
@@ -658,6 +708,7 @@ if (count === 0) {
 </body>
 
 </html>
+
 
 
 
